[tool.poetry]
name = "reactpy-template"
version = "0.1.0"
description = ""
authors = ["Steve Jones <jonesst2608@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

uvicorn = "^0.25.0"
reactpy = {extras = ["fastapi"], version = "^1.0.2"}
fastapi = "^0.108.0"
reactpy-router = "^0.1.1"
pandas = "^2.1.4"
sqlmodel = "^0.0.14"
plotly = "^5.18.0"
reactpy-select = {version = "^0.0.1", source = "pypicloud"}
colorlover = "^0.3.0"
mistune = "^3.0.2"
reactpy-table = {version = "0.0.2", source = "pypicloud"}


[[tool.poetry.source]]
name = "pypicloud"
url = "http://debian-server:6543/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
