[tool.poetry]
name = "reactpy-template"
version = "0.1.0"
description = ""
authors = ["Steve Jones <jonesst2608@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

uvicorn = "^0.25.0"
reactpy = {extras = ["fastapi"], version = "^1.0.2"}
fastapi = "^0.108.0"

# poetry lock --no-update && poetry install  --no-root
# reactpy-router =  {path = "../reactpy-router", develop = true}
reactpy-router = {url = " https://raw.githubusercontent.com/stevej2608/reactpy-router/v0.1.3/dist/reactpy_router-0.1.3-py2.py3-none-any.whl"}

pandas = "^2.1.4"
sqlmodel = "^0.0.14"
plotly = "^5.18.0"
reactpy-select = "^0.0.5"
colorlover = "^0.3.0"
mistune = "^3.0.2"
reactpy-table = "^0.0.11"

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
# https://marketplace.visualstudio.com/items?itemName=charliermarsh.ruff

line-length = 120
[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#sample-pyprojecttoml-file
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingTypeStubs = false


[[tool.poetry.source]]
name = "pypicloud"
url = "http://debian-server:6543/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
